--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-< DOCTYPE html>
+<!DOCTYPE=html>
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
@@ -6,7 +6,13 @@
 	</head>
 	<body>
 		<header>
-			<img class="logo" src="">
+			<img class="logo" src="img/logo.png">
+			<div class="user_menu">
+				<ul class="user_buttons">
+					<li class="user_button"><input class="form" type="form" name="search" placeholder="Текст поиска"></input></li>
+					<li class="user_button"></li>
+				</ul>
+			</div>
 		</header>
 		<main>
 		</main>
