--- a/Index.html
+++ b/Index.html
@@ -25,6 +25,47 @@
 					<li class="navigation_item"><a href="#">КОНТАКТЫ</a></li>
 				</ul>
 			</nav>
+						<section class="galery">
+				<h2 class="gallery-title visuality-hidden">Bestsellers</h2>
+				<img class="slider-image" src="" alt="Лучший товар">
+				<button class="slider-button slider-prev" type="button">
+				<span class="visuality-hidden">Предыдущее фото</span>
+				</button>
+				<button class="slider-button slider-next" type="button">
+				<span class="visualy-hidden">Следующее фото</span>
+				</button>
+				<div>
+					<h3 class="Bestsellers_head">Порхает как бабочка, жалит как пчела!</h3>
+					<b class="Bestsellers_text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</b>
+				</div>
+				<a class="Bestsellers_link" href="#">Подробнее</a>
+				<ol class="slider-pagination">
+					<li class="slider-pagination-item">
+						<button class="slider-pagination-button slider-pagination-button-current" type="button">
+							<span class="visualy-hidden">1 фото</span>
+						</button>
+					</li>
+					<li class="slider-pagination-item">
+						<button class="slider-pagination-button slider-pagination-button-current" type="button">
+							<span class="visualy-hidden">2 фото</span>
+						</button>
+					</li>
+					<li class="slider-pagination-item">
+						<button class="slider-pagination-button slider-pagination-button-current" type="button">
+							<span class="visualy-hidden">3 фото</span>
+						</button>
+					</li>
+					<li class="slider-pagination-item">
+						<button class="slider-pagination-button slider-pagination-button-current" type="button">
+							<span class="visualy-hidden">4 фото</span>
+						</button>
+					</li>
+				</ol>
+				<span class="Bestsellers_views">800 м</span>
+				<h3 class="Bestsellers_views_title">Дальность полета</h3>
+				<span class="Bestsellers_views2">50 м</span>
+				<h3 class="Bestsellers_views_title2">Радиус поражения</h3>
+			</section>
 		</header>
 		<main>
 		</main>
