--- a/Index.html
+++ b/Index.html
@@ -66,6 +66,16 @@
 				<span class="Bestsellers_views2">50 м</span>
 				<h3 class="Bestsellers_views_title2">Радиус поражения</h3>
 			</section>
+			<section class="categories_sale">
+				<ul class="categories_sale">
+					<li class="categories_sale_item"><a class="categories_sale_link" href="#"><img class="categories_sale_mg" src="#" alt="виртуальные очки">Виртуальная реальность</a></li>
+					<li class="categories_sale_item"><a class="categories_sale_link" href="#"><img class="categories_sale_mg" src="#" alt="моноподы">Моноподы для селфи</a></li>
+					<li class="categories_sale_item"><a class="categories_sale_link" href="#"><img class="categories_sale_mg" src="#" alt="экшн-камеры">Экшн-камеры</a></li>
+					<li class="categories_sale_item"><a class="categories_sale_link" href="#"><img class="categories_sale_mg" src="#" alt="Фитнес браслеты">Фитнес-браслеты</a></li>
+					<li class="categories_sale_item"><a class="categories_sale_link" href="#"><img class="categories_sale_mg" src="#" alt="смарт часы">Умные часы</a></li>
+					<li class="categories_sale_item"><a class="categories_sale_link" href="#"><img class="categories_sale_mg" src="#" alt="квадорокоптеры">Квадрокоптеры</a></li>
+				</ul>
+			</section>
 		</header>
 		<main>
 		</main>
