--- a/Index.html
+++ b/Index.html
@@ -76,6 +76,54 @@
 					<li class="categories_sale_item"><a class="categories_sale_link" href="#"><img class="categories_sale_mg" src="#" alt="квадорокоптеры">Квадрокоптеры</a></li>
 				</ul>
 			</section>
+			<section class="uslov">
+				<button class="uslov_change">доставка</button>
+					<div class="uslov_change_dostavka">
+						<h1>Доставка</h1>
+						<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+					</div>
+					<button class="uslov_change">гарантия</button>
+					<div class="uslov_change_garant">
+						<h1>Гарантия</h1>
+						<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+					</div>
+					<button class="uslov_change">кредит</button>
+					<div class="uslov_change_kredit">
+						<h1>Кредит</h1>
+						<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+					</div>
+			</section>
+			<div class="uslov_dop">
+				<img src="#" alt="доставка"> доставим редкий товар под заказ <a class="uslov_dop_hint" href="#">i</a>
+			</div>
+			<section class="about_us">
+				<div class="about_us_us">
+					<h3>О нас</h3>
+					<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
+					<p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:
+						<ul class="about_us_servises">
+							<li class="about_us_servises_items">Меловые линии</li>
+							<li class="about_us_servises_items">СДИК</li>
+							<li class="about_us_servises_items">ТоксБери</li>
+						</ul>
+					<a class="about_us" href="#">подробнее о нас</a>
+				</div>
+				<div class="about_us_contacts">
+					<h3>Контакты</h3>
+					<p>Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. 
+					<h4>Интеренет-магазин "Девайс"</h4>
+					<address class="contacts-addres">
+						<p class="contacts-addres-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+						<a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+					</address>
+					<h3 class="contacts-subtitle">Время работы</h3>
+					<ul class="contacts-shedule">
+						<li class="contacts-shedule-item">пн-пт: с 10.00 до 22.00</li>
+						<li class="contacts-shedule-item">сб-вс: с 10.00 до 19.00</li>
+					</ul>
+					<a class="about_us_contacts" href="#">напишите нам</a>
+				</div>
+			</section>
 		</header>
 		<main>
 		</main>
