ending index add catalog

--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,10 @@
 					<li class="navigation_item"><a href="#">КОНТАКТЫ</a></li>
 				</ul>
 			</nav>
-						<section class="galery">
+
+		</header>
+		<main>
+								<section class="galery">
 				<h2 class="gallery-title visuality-hidden">Bestsellers</h2>
 				<img class="slider-image" src="" alt="Лучший товар">
 				<button class="slider-button slider-prev" type="button">
@@ -124,9 +127,45 @@
 					<a class="about_us_contacts" href="#">напишите нам</a>
 				</div>
 			</section>
-		</header>
-		<main>
+			<div class="maling">
+				<h2 class="maling_subtitile">Подпишитеьс на рассылку</h2>
+				<p>Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+				
+					
+					<form class="maling-form" action="https://ya.ru" method="post"> <!-- адрес отправки данных с формы-->
+					<p>
+						<label class="visually-hidden" for="maling-email">Email</label>
+						<input id="maling-email" type="email" name="maling-email" placeholder="Ваш e-mail">
+					</p>
+					<button class="button maling-button" type="submit">
+							<span class="visually-hidden" >ПОДПИСАТЬСЯ</span>
+						</button>
+						</span>
+					</form>
+					<span class="maling_free"><img class="maling_free" src="#" alt="tick">Это бесплатно</span>
+			
+			</div>
 		</main>
 		<footer>
+			<div class="addres_footer">
+				<img class="addres_footer_logo" src="#" alt="logo">
+				<p class="addres_footer_text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+			</div>
+			<div class="footer_uslov">
+				<ul class="footer_uslov_links">
+					<li class="footer_uslov_links_item"><a class="footer_uslov_links" href="#">ДОСТАВКА</a></li>
+					<li class="footer_uslov_links_item"><a class="footer_uslov_links" href="#">ГАРАНТИЯ</a></li>
+					<li class="footer_uslov_links_item"><a class="footer_uslov_links" href="#">КОНТАКТЫ</a></li>
+				</ul>
+				<ul class="footer_uslov_socnet">
+					<li class="footer_uslov_socnet_item"><a class="footer_uslov_socnet" href="https://www.facebook.com/htmlacademy"><img class="footer_uslov_socnet_img" src="#" alt="fb"></a></li>
+					<li class="footer_uslov_socnet_item"><a class="footer_uslov_socnet" href="https://www.instagram.com/htmlacademy/"><img class="footer_uslov_socnet_img" src="#" alt="inst"></a></li>
+					<li class="footer_uslov_socnet_item"><a class="footer_uslov_socnet" href="https://www.twitter.com/htmlacademy_ru"><img class="footer_uslov_socnet_img" src="#" alt="tvit"></a></li>
+				</ul>
+			</div>
+			<div class="footer_tel">
+				<a class="footer-phone" href="tel:+78128121212">Тел.:+7 (812) 812-12-12</a>
+				<a class="htmlacademy_logo" href="https://www.htmlacademy.ru"><img class="footer_acad_logo" src="#" alt="html academy logo"></a>
+			<div>
 		</footer>
 	</body>
